refactoring nf-pipelines and editing GMM modeling

--- a/notebooks/analysis/2_exploration.ipynb
+++ b/notebooks/analysis/2_exploration.ipynb
@@ -2,9 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Modification already exists in ModificationsDB. Skipping.\n"
+     ]
+    }
+   ],
    "source": [
     "from denovo_utils.parsers.converters import SpectralisParser, DenovoEngineConverter\n",
     "from denovo_utils.utils.pandas import (\n",
@@ -15,6 +23,8 @@
     "    amino_acid_converter,\n",
     "    drop_charge\n",
     ")\n",
+    "from denovo_utils.parsers.constants import EXTENSIONS\n",
+    "\n",
     "import pandas as pd\n",
     "import os\n",
     "\n",
@@ -33,11 +43,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
-    "filename=\"F06\"\n",
+    "# filename=\"S03\"\n",
+    "filename = \"F06\"\n",
     "\n",
     "root_data=\"/home/samva/Doctorate/data_directory/denovo_project\"\n",
     "mgf_path=os.path.join(root_data, \"mgf_filtered\", filename + \".mgf\")\n",
@@ -46,61 +57,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['Casanovo4.2.0', 'InstaNovo', 'PepNet', 'ContraNovo']\n"
-     ]
-    },
-    {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 80842/80842 [00:02<00:00, 40323.74it/s]\n",
-      "100%|██████████| 80842/80842 [00:00<00:00, 169745.56it/s]\n",
-      "100%|██████████| 80759/80759 [00:03<00:00, 20680.11it/s]\n",
-      "100%|██████████| 80759/80759 [00:00<00:00, 164924.78it/s]\n",
-      "100%|██████████| 83186/83186 [00:01<00:00, 48613.08it/s]\n",
-      "100%|██████████| 83186/83186 [00:00<00:00, 164381.46it/s]\n",
-      "100%|██████████| 40545/40545 [00:00<00:00, 46095.95it/s]\n",
-      "100%|██████████| 40545/40545 [00:00<00:00, 163030.62it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['NovoB', 'Novor', 'PepNovo+']\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 79457/79457 [00:03<00:00, 24387.99it/s]\n",
-      "100%|██████████| 78630/78630 [00:00<00:00, 167242.21it/s]\n",
-      "100%|██████████| 80955/80955 [00:01<00:00, 41584.07it/s]\n",
-      "100%|██████████| 80955/80955 [00:00<00:00, 164559.08it/s]\n",
-      "100%|██████████| 67487/67487 [00:01<00:00, 41915.54it/s]\n",
-      "100%|██████████| 67487/67487 [00:00<00:00, 165261.85it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['sage']\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 76181/76181 [00:00<00:00, 154061.25it/s]\n"
+      "100%|██████████| 80842/80842 [00:02<00:00, 30768.83it/s]\n",
+      "100%|██████████| 80842/80842 [00:00<00:00, 140636.17it/s]\n",
+      "100%|██████████| 80759/80759 [00:01<00:00, 41922.59it/s]\n",
+      "100%|██████████| 80759/80759 [00:00<00:00, 114651.59it/s]\n",
+      "100%|██████████| 83186/83186 [00:02<00:00, 39172.24it/s]\n",
+      "100%|██████████| 83186/83186 [00:00<00:00, 128500.97it/s]\n",
+      "100%|██████████| 40545/40545 [00:01<00:00, 38922.52it/s]\n",
+      "100%|██████████| 40545/40545 [00:00<00:00, 120230.12it/s]\n",
+      "100%|██████████| 79457/79457 [00:06<00:00, 11755.86it/s]\n",
+      "100%|██████████| 78630/78630 [00:00<00:00, 156131.94it/s]\n",
+      "100%|██████████| 80955/80955 [00:01<00:00, 42181.63it/s]\n",
+      "100%|██████████| 80955/80955 [00:00<00:00, 153096.32it/s]\n",
+      "100%|██████████| 67487/67487 [00:01<00:00, 42012.16it/s]\n",
+      "100%|██████████| 67487/67487 [00:00<00:00, 155287.66it/s]\n",
+      "100%|██████████| 76181/76181 [00:00<00:00, 142404.78it/s]\n"
      ]
     }
    ],
@@ -137,35 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'Casanovo4.2.0': True,\n",
-       " 'InstaNovo': True,\n",
-       " 'PepNet': True,\n",
-       " 'ContraNovo': True,\n",
-       " 'NovoB': True,\n",
-       " 'Novor': True,\n",
-       " 'PepNovo+': True,\n",
-       " 'percolator': False,\n",
-       " 'sage': True}"
-      ]
-     },
-     "execution_count": 24,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "parser_spectralis.added_results"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -189,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -216,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
