--- a/notebooks/scrap_notes/merge_results.ipynb
+++ b/notebooks/scrap_notes/merge_results.ipynb
@@ -18,6 +18,145 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['source name', 'characteristics[organism]',\n",
+       "       'characteristics[organism part]', 'characteristics[cell type]',\n",
+       "       'characteristics[disease]', 'characteristics[cell line]',\n",
+       "       'characteristics[concentration of]', 'characteristics[spiked compound]',\n",
+       "       'characteristics[biological replicate]', 'assay name',\n",
+       "       'comment[technical replicate]', 'comment[fraction identifier]',\n",
+       "       'comment[label]', 'comment[data file]', 'comment[file uri]',\n",
+       "       'comment[proteomexchange accession number]', 'comment[instrument]',\n",
+       "       'comment[cleavage agent details]', 'comment[modification parameters]',\n",
+       "       'comment[lowest observed m/z]', 'comment[highest observed m/z]'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "file_path = \"/home/samva/Doctorate/data_directory/PXD028735/experimental-design.sdrf.tsv\"\n",
+    "sdrf = pd.read_csv(file_path, sep=\"\\t\")\n",
+    "sdrf.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "comment[instrument]\n",
+       "NT=TripleTOF 6600;AC=MS:1002533     318\n",
+       "NT=Q Exactive HF-X;AC=MS:1002877    240\n",
+       "NT=Synapt XS;AC=MS:1003183          228\n",
+       "NT=TripleTOF 5600;AC=MS:1000932     228\n",
+       "NT=SYNAPT G2-Si;AC=MS:1002726       180\n",
+       "NT=timsTOF Pro;AC=MS:1003005        180\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sdrf[[\"source name\", \"assay name\", \"comment[instrument]\", 'comment[data file]']].value_counts(\"comment[instrument]\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "filtered_sdrf = sdrf[sdrf[\"comment[data file]\"].apply(lambda x: \"DDA\" in x)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "comment[instrument]\n",
+       "NT=Q Exactive HF-X;AC=MS:1002877    117\n",
+       "NT=SYNAPT G2-Si;AC=MS:1002726        90\n",
+       "NT=Synapt XS;AC=MS:1003183           90\n",
+       "NT=TripleTOF 5600;AC=MS:1000932      90\n",
+       "NT=TripleTOF 6600;AC=MS:1002533      90\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "filtered_sdrf.value_counts(\"comment[instrument]\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "raw     297\n",
+       "wiff    180\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "filtered_sdrf[[\"source name\", \"assay name\", \"comment[instrument]\", 'comment[data file]']].apply(lambda x: x[\"comment[data file]\"].split(\".\")[-1], axis=1).value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Escherichia coli            159\n",
+       "Homo sapiens                159\n",
+       "Saccharomyces cerevisiae    159\n",
+       "Name: characteristics[organism], dtype: int64"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "filtered_sdrf['characteristics[organism]'].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
    "outputs": [],
