--- a/notebooks/scrap_notes/new_parsers.ipynb
+++ b/notebooks/scrap_notes/new_parsers.ipynb
@@ -2,9 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Modification already exists in ModificationsDB. Skipping.\n"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "import os\n",
@@ -26,6 +34,444 @@
     "from denovo_utils.parsers.converters.utils import parse_peptidoform\n",
     "\n",
     "tqdm.pandas()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "filename = \"LFQ_TTOF6600_DDA_Human_01\"\n",
+    "mgf_file = mgf.read(f\"/home/samva/Doctorate/data_directory/PXD028735/mgf/TTOF6600/original/{filename}.mgf\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import re\n",
+    "\n",
+    "\n",
+    "def parse_title(spectrum: dict):\n",
+    "    title_pattern = r\"controllerType=\\d+ controllerNumber=\\d+ scan=(\\d+)\"\n",
+    "    try:\n",
+    "        title = spectrum[\"params\"][\"title\"]\n",
+    "    except KeyError:\n",
+    "        return False, False\n",
+    "    \n",
+    "    match = re.search(title_pattern, title)\n",
+    "    if match:\n",
+    "        title_id = match.group(0)\n",
+    "        scan_number = match.group(1)\n",
+    "        return title_id, scan_number\n",
+    "    else:\n",
+    "        return False, False\n",
+    "\n",
+    "def parse_charge(spectrum: dict):\n",
+    "\n",
+    "    try:\n",
+    "        charge = spectrum[\"params\"][\"charge\"]\n",
+    "    except KeyError:\n",
+    "        return False\n",
+    "    \n",
+    "    if len(charge)>1:\n",
+    "        logging.warning(f\"{spectrum['params']['title']}: Has multiple charges ({charge})\")\n",
+    "    return int(charge[0])\n",
+    "\n",
+    "def parse_pepmass(spectrum: dict, silence_warning=True):\n",
+    "\n",
+    "    try:\n",
+    "        pepmass = spectrum[\"params\"][\"pepmass\"]\n",
+    "        if len(pepmass)>1 and not silence_warning:\n",
+    "            logging.warning(f\"{spectrum['params']['title']}: Pepmass field holds multiple values. ({pepmass})\")\n",
+    "        return pepmass[0]\n",
+    "    except KeyError:\n",
+    "        raise Exception(\"No pepmass field in the precursor info of MGF spectrum.\")\n",
+    "\n",
+    "def check_required_fields(spectrum: dict):\n",
+    "\n",
+    "    start_new_index = False\n",
+    "\n",
+    "    # Check title field\n",
+    "    title_id, _ = parse_title(spectrum)\n",
+    "    if title_id == False:\n",
+    "        start_new_index = True\n",
+    "    \n",
+    "    # Check charge field\n",
+    "    _ = parse_charge(spectrum)\n",
+    "\n",
+    "    # Check pepmass\n",
+    "    _ = parse_pepmass(spectrum, silence_warning=False)\n",
+    "\n",
+    "    return start_new_index"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "'NoneType' object is not subscriptable",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[7], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m i, spec \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28menumerate\u001b[39m(mgf_file):\n\u001b[0;32m----> 2\u001b[0m     mz_array \u001b[38;5;241m=\u001b[39m \u001b[43mspec\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mm/z array\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m]\u001b[49m\n",
+      "\u001b[0;31mTypeError\u001b[0m: 'NoneType' object is not subscriptable"
+     ]
+    }
+   ],
+   "source": [
+    "for i, spec in enumerate(mgf_file):\n",
+    "    mz_array = spec[\"m/z array\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mgf_file[55659]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "spec"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "55658"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "i"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def reformat_mgf(\n",
+    "        path_mgf,\n",
+    "        output_dir=\"\",\n",
+    "        min_peak_length=15,\n",
+    "        max_charge=8\n",
+    "    ):\n",
+    "\n",
+    "    mgf_file = mgf.read(path_mgf)\n",
+    "    filename = os.path.basename(path_mgf)\n",
+    "    logging.info(f\"\\n\\nParsing {filename}\")\n",
+    "\n",
+    "    total_spectra = len(mgf_file)\n",
+    "    start_new_index = check_required_fields(spectrum=mgf_file[0])\n",
+    "\n",
+    "    spectrum_list = []\n",
+    "\n",
+    "    skipped_missing_charge = 0\n",
+    "    skipped_above_max_charge = 0\n",
+    "    skipped_by_peak_length = 0\n",
+    "\n",
+    "    for i, spectrum in enumerate(mgf_file):\n",
+    "        \n",
+    "        if len(spectrum[\"m/z array\"]) < min_peak_length:\n",
+    "            skipped_by_peak_length += 1\n",
+    "            continue\n",
+    "\n",
+    "        if start_new_index:\n",
+    "            title, scan_id = f\"controllerType=0 controllerNumber=1 scan={i}\", i\n",
+    "        else:\n",
+    "            title, scan_id = parse_title(spectrum=spectrum)\n",
+    "        \n",
+    "        charge = parse_charge(spectrum=spectrum)\n",
+    "        if charge==False:\n",
+    "            skipped_missing_charge += 1\n",
+    "            continue\n",
+    "\n",
+    "        if charge > max_charge:\n",
+    "            skipped_above_max_charge += 1\n",
+    "            continue\n",
+    "\n",
+    "        pepmass = parse_pepmass(spectrum=spectrum)\n",
+    "        rtinseconds = spectrum[\"params\"][\"rtinseconds\"]\n",
+    "            \n",
+    "        params = {\n",
+    "            \"title\": title,\n",
+    "            \"pepmass\": pepmass,\n",
+    "            \"rtinseconds\": rtinseconds,\n",
+    "            \"charge\": str(charge)+\"+\",\n",
+    "            \"scans\": scan_id,\n",
+    "        }\n",
+    "        spectrum[\"params\"] = params\n",
+    "        spectrum_list.append(spectrum)\n",
+    "\n",
+    "    if spectrum_list == []:\n",
+    "        logging.warning(f\"{filename}: No spectra left after precursor info validation and filtering.\")\n",
+    "\n",
+    "    logging.info(\n",
+    "        f\"\\nTotal spectra: {total_spectra}; After filtering: {len(spectrum_list)}\\n\\t\"\n",
+    "        f\"Filtered spectra: {total_spectra-len(spectrum_list)}\\n\\t\" \\\n",
+    "        f\"Peaks below{min_peak_length}: {skipped_by_peak_length}\\n\\t\" \\\n",
+    "        f\"No charge field: {skipped_missing_charge}\\n\\t\" \\\n",
+    "        f\"Above max charge ({max_charge}): {skipped_above_max_charge}\"\n",
+    "    )\n",
+    "\n",
+    "    if (skipped_missing_charge+skipped_by_peak_length) == total_spectra:\n",
+    "        raise Exception(\"Use a charge predictor for annotation! All MGFs have missing charge field.\")\n",
+    "\n",
+    "    mgf.write(\n",
+    "        spectra=spectrum_list,\n",
+    "        output=os.path.join(output_dir, filename),\n",
+    "        header=mgf_file.header\n",
+    "    )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/home/samva/Doctorate/data_directory/tests/mgf/test2.mgf\n",
+      "/home/samva/Doctorate/data_directory/tests/mgf/test3.mgf\n"
+     ]
+    },
+    {
+     "ename": "Exception",
+     "evalue": "Use a charge predictor for annotation! All MGFs have missing charge field.",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mException\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[59], line 3\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m p \u001b[38;5;129;01min\u001b[39;00m glob(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m/home/samva/Doctorate/data_directory/tests/mgf/*.mgf\u001b[39m\u001b[38;5;124m\"\u001b[39m):\n\u001b[1;32m      2\u001b[0m     \u001b[38;5;28mprint\u001b[39m(p)\n\u001b[0;32m----> 3\u001b[0m     \u001b[43mreformat_mgf\u001b[49m\u001b[43m(\u001b[49m\n\u001b[1;32m      4\u001b[0m \u001b[43m        \u001b[49m\u001b[43mpath_mgf\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mp\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m      5\u001b[0m \u001b[43m        \u001b[49m\u001b[43moutput_dir\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43m/home/samva/Doctorate/data_directory/tests/mgf_reformatted\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\n\u001b[1;32m      6\u001b[0m \u001b[43m        \u001b[49m\u001b[43mmin_peak_length\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;241;43m15\u001b[39;49m\u001b[43m,\u001b[49m\n\u001b[1;32m      7\u001b[0m \u001b[43m        \u001b[49m\u001b[43mmax_charge\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;241;43m8\u001b[39;49m\n\u001b[1;32m      8\u001b[0m \u001b[43m    \u001b[49m\u001b[43m)\u001b[49m\n",
+      "Cell \u001b[0;32mIn[55], line 66\u001b[0m, in \u001b[0;36mreformat_mgf\u001b[0;34m(path_mgf, output_dir, min_peak_length, max_charge)\u001b[0m\n\u001b[1;32m     57\u001b[0m logging\u001b[38;5;241m.\u001b[39minfo(\n\u001b[1;32m     58\u001b[0m     \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[38;5;124mTotal spectra: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mtotal_spectra\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m; After filtering: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00m\u001b[38;5;28mlen\u001b[39m(spectrum_list)\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[38;5;130;01m\\t\u001b[39;00m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m     59\u001b[0m     \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mFiltered spectra: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mtotal_spectra\u001b[38;5;241m-\u001b[39m\u001b[38;5;28mlen\u001b[39m(spectrum_list)\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[38;5;130;01m\\t\u001b[39;00m\u001b[38;5;124m\"\u001b[39m \\\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m     62\u001b[0m     \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mAbove max charge (\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mmax_charge\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m): \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mskipped_above_max_charge\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m     63\u001b[0m )\n\u001b[1;32m     65\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m (skipped_missing_charge\u001b[38;5;241m+\u001b[39mskipped_by_peak_length) \u001b[38;5;241m==\u001b[39m total_spectra:\n\u001b[0;32m---> 66\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mException\u001b[39;00m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mUse a charge predictor for annotation! All MGFs have missing charge field.\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m     68\u001b[0m mgf\u001b[38;5;241m.\u001b[39mwrite(\n\u001b[1;32m     69\u001b[0m     spectra\u001b[38;5;241m=\u001b[39mspectrum_list,\n\u001b[1;32m     70\u001b[0m     output\u001b[38;5;241m=\u001b[39mos\u001b[38;5;241m.\u001b[39mpath\u001b[38;5;241m.\u001b[39mjoin(output_dir, filename),\n\u001b[1;32m     71\u001b[0m     header\u001b[38;5;241m=\u001b[39mmgf_file\u001b[38;5;241m.\u001b[39mheader\n\u001b[1;32m     72\u001b[0m )\n",
+      "\u001b[0;31mException\u001b[0m: Use a charge predictor for annotation! All MGFs have missing charge field."
+     ]
+    }
+   ],
+   "source": [
+    "for p in glob(\"/home/samva/Doctorate/data_directory/tests/mgf/*.mgf\"):\n",
+    "    print(p)\n",
+    "    reformat_mgf(\n",
+    "        path_mgf=p,\n",
+    "        output_dir=\"/home/samva/Doctorate/data_directory/tests/mgf_reformatted\",\n",
+    "        min_peak_length=15,\n",
+    "        max_charge=8\n",
+    "    )"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "casanovo = {  \"G\": 57.021464,\n",
+    "  \"A\": 71.037114,\n",
+    "  \"S\": 87.032028,\n",
+    "  \"P\": 97.052764,\n",
+    "  \"V\": 99.068414,\n",
+    "  \"T\": 101.047670,\n",
+    "  \"C+57.021\": 160.030649, # 103.009185 + 57.021464,\n",
+    "  \"L\": 113.084064,\n",
+    "  \"I\": 113.084064,\n",
+    "  \"N\": 114.042927,\n",
+    "  \"D\": 115.026943,\n",
+    "  \"Q\": 128.058578,\n",
+    "  \"K\": 128.094963,\n",
+    "  \"E\": 129.042593,\n",
+    "  \"M\": 131.040485,\n",
+    "  \"H\": 137.058912,\n",
+    "  \"F\": 147.068414,\n",
+    "  \"R\": 156.101111,\n",
+    "  \"Y\": 163.063329,\n",
+    "  \"W\": 186.079313,\n",
+    "  # Amino acid modifications.,\n",
+    "  \"M+15.995\": 147.035400 ,  # Met oxidation:   131.040485 + 15.994915,\n",
+    "  \"N+0.984\": 115.026943 ,    # Asn deamidation: 114.042927 +  0.984016,\n",
+    "  \"Q+0.984\": 129.042594 ,    # Gln deamidation: 128.058578 +  0.984016\n",
+    "  # N-terminal modifications.,\n",
+    "  \"+42.011\": 42.010565 ,     # Acetylation,\n",
+    "  \"+43.006\": 43.005814    ,  # Carbamylation,\n",
+    "  \"-17.027\": -17.026549   ,  # NH3 loss,\n",
+    "  \"+43.006-17.027\": 25.980265    ,  # Carbamylation and NH3 loss\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "idx2amino = {0: '<pad>',1: '<bos>', 2: '<eos>',\n",
+    "             3: 'A', 4: 'C', 5: 'D', 6: 'E', 7: 'F',\n",
+    "             8: 'G', 9: 'H', 10: 'I', 11: 'K', 12: 'L',\n",
+    "             13: 'M', 14: 'N', 15: 'P', 16: 'Q', 17: 'R',\n",
+    "             18: 'S', 19: 'T', 20: 'V', 21: 'W', 22: 'Y',\n",
+    "             23: 'm', 24: 'n', 25: 'q', 26: 's', 27: 't', 28: 'y'}\n",
+    "\n",
+    "\n",
+    "# High: D = n, E = q, L = I\n",
+    "# Low: K = Q (0.4), F = m (0.3)\n",
+    "idx2mass = {0: 0.00, 1: 0.00, 2: 0.00,\n",
+    "             3: 71.037, 4: 160.031, 5: 115.027, 6: 129.043, 7: 147.068,\n",
+    "             8: 57.021, 9: 137.059, 10: 113.084, 11: 128.095, 12: 113.084,\n",
+    "             13: 131.040, 14: 114.043, 15: 97.053, 16: 128.059, 17: 156.101,\n",
+    "             18: 87.032, 19: 101.048, 20: 99.068, 21: 186.079, 22: 163.063,\n",
+    "             23: 147.035, 24: 115.027, 25: 129.043, 26: 166.998, 27: 181.014, 28:243.030}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<pad>\n",
+      "(0.0)\n",
+      "<bos>\n",
+      "(0.0)\n",
+      "<eos>\n",
+      "(0.0)\n",
+      "A\n",
+      "(71.037)\n",
+      "C\n",
+      "(160.031)\n",
+      "D\n",
+      "(115.027)\n",
+      "E\n",
+      "(129.043)\n",
+      "F\n",
+      "(147.068)\n",
+      "G\n",
+      "(57.021)\n",
+      "H\n",
+      "(137.059)\n",
+      "I\n",
+      "(113.084)\n",
+      "K\n",
+      "(128.095)\n",
+      "L\n",
+      "(113.084)\n",
+      "M\n",
+      "(131.04)\n",
+      "N\n",
+      "(114.043)\n",
+      "P\n",
+      "(97.053)\n",
+      "Q\n",
+      "(128.059)\n",
+      "R\n",
+      "(156.101)\n",
+      "S\n",
+      "(87.032)\n",
+      "T\n",
+      "(101.048)\n",
+      "V\n",
+      "(99.068)\n",
+      "W\n",
+      "(186.079)\n",
+      "Y\n",
+      "(163.063)\n",
+      "m\n",
+      "(147.035)\n",
+      "n\n",
+      "(115.027)\n",
+      "q\n",
+      "(129.043)\n",
+      "s\n",
+      "(166.998)\n",
+      "t\n",
+      "(181.014)\n",
+      "y\n",
+      "(243.03)\n"
+     ]
+    }
+   ],
+   "source": [
+    "for k in idx2amino.keys():\n",
+    "    print(\"{}\\n({})\".format(idx2amino[k], idx2mass[k]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "G: 57.021464\n",
+      "A: 71.037114\n",
+      "S: 87.032028\n",
+      "P: 97.052764\n",
+      "V: 99.068414\n",
+      "T: 101.04767\n",
+      "C+57.021: 160.030649\n",
+      "L: 113.084064\n",
+      "I: 113.084064\n",
+      "N: 114.042927\n",
+      "D: 115.026943\n",
+      "Q: 128.058578\n",
+      "K: 128.094963\n",
+      "E: 129.042593\n",
+      "M: 131.040485\n",
+      "H: 137.058912\n",
+      "F: 147.068414\n",
+      "R: 156.101111\n",
+      "Y: 163.063329\n",
+      "W: 186.079313\n",
+      "M+15.995: 147.0354\n",
+      "N+0.984: 115.026943\n",
+      "Q+0.984: 129.042594\n",
+      "+42.011: 42.010565\n",
+      "+43.006: 43.005814\n",
+      "-17.027: -17.026549\n",
+      "+43.006-17.027: 25.980265\n"
+     ]
+    }
+   ],
+   "source": [
+    "for k, v in casanovo.items():\n",
+    "    print(\"{}: {}\".format(k, v))"
    ]
   },
   {
