--- a/notebooks/analysis/1_parsing.ipynb
+++ b/notebooks/analysis/1_parsing.ipynb
@@ -4,7 +4,15 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Modification already exists in ModificationsDB. Skipping.\n"
+     ]
+    }
+   ],
    "source": [
     "from glob import glob\n",
     "import os\n",
